fix width overflow

--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -40,7 +40,7 @@
     p {
       font-size: 1.25rem;
       color: white;
-      width: 30rem;
+      width: 35rem;
     }
 
     ul {
